[package]
name = "ntop"
version = "0.1.0"
authors = ["Niklas <niklas@long.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pea2pea = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.2.0"
tracing-subscriber = "0.2.16"
jsonrpc-http-server = "17.0"
parking_lot = "0.11.1"



